//
// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package differential_privacy.privacy_on_beam.test;

message TestAnon {
  optional int64 foo = 1;
  optional string bar = 2;
}

message TestComplex {
  optional string simple = 1;
  optional string empty = 2;
  repeated string repeat = 3;
  message Submessage {
    optional string simple = 1;
    repeated string repeat = 2;
  }
  optional Submessage sub = 4;
  repeated Submessage subrepeat = 5;
}
